fix padding on small visual image from url

--- a/styles/modules/topperimage.module.less
+++ b/styles/modules/topperimage.module.less
@@ -133,7 +133,7 @@
 .c-img-small-visual-url {
   max-width: var(--small-visual-max-width);
   width: calc(100vw - 32px);
-  margin: @s16 @s16 0 @s16;
+  margin: @s16 @s16 0 0;
 
   @media @mobile {
     margin: auto;
